# octopod

./: .gitattributes  .gitignore  .gitmodules  .hlint.yaml  .stylish-haskell.yaml  Caddyfile  Caddyfile1  Caddyfile2  CaddyfileGhcid  ChangeLog.md  Development_guide.md  LICENSE  Makefile  README.md  Release_checklist.md  build.sh  cabal.project  default.nix  dm.cabal  docker.nix  fourmolu.yaml  hie.yaml  index.yaml  octopod-0.3.0.tgz  octopod-0.3.1.tgz  octopod-0.3.2.tgz  octopod-0.4.0.tgz  octopod-0.4.1.tgz  octopod-0.4.2.tgz  octopod-0.4.3.tgz  octopod-0.5.1.tgz  octopod-0.6.0.tgz  octopod-0.6.1.tgz  octopod-0.6.10.tgz  octopod-0.6.11.tgz  octopod-0.6.2.tgz  octopod-0.6.4.tgz  octopod-0.6.5.tgz  octopod-0.6.6.tgz  octopod-0.6.7.tgz  (+7 more)
.github/workflows/: build.yaml  build_docker.yaml  build_octo_cli.yaml  check_documentation.yaml  release.yaml
.nova/: Configuration.json
app/dmc/: Main.hs
app/dms/: Main.hs
chart-repo/: index.yaml  octopod-0.2.0.tgz
charts/cert-control/: Chart.yaml
charts/job-control/: Chart.yaml  values.yaml
charts/kubedog-access/: Chart.yaml  values.yaml
charts/octopod/: Chart.yaml  README.md  index.yaml  values.yaml
charts/octopod-infra/: Chart.yaml  values.yaml
charts/pvc-control/: Chart.yaml
deploy/: deployments.sql
dev/: config.json  default.nix  dev_backend.sh  info.sh  write.sh
dm-backend/: dm-backend.cabal
dm-backend/app/dmc/: Main.hs
dm-backend/src/: API.hs  DMC.hs  DMS.hs  Orphans.hs  Types.hs
dm-backend/src/DMC/: Args.hs
dm-backend/src/DMS/: AWS.hs  Args.hs  Logger.hs  Unix.hs
dm-common/: dm-common.cabal
dm-common/src/: Common.hs
dm-frontend/: CHANGELOG.md  LICENSE  dm-frontend.cabal
dm-frontend/src/: Main.hs
docker/: Dockerfile  build_docker.sh
docs/: Makefile  README.md  Technical_architecture.md  style.css
docs/en/: Control_scripts.md  Helm-based_deployment_guide.md  Integration.md  Octo_user_guide.md  Octopod_deployment_guide.md  Overview.md  PM_case_study.md  README.md  Security_model.md  Tech_case_study.md  Technical_architecture.md
docs/ru/: Control_scripts.md  Helm-based_deployment_guide.md  Octo_user_guide.md  Octopod_deployment_with_K8S.md  README.md  Security_model.md  Staging_control_scripts.md  Technical_architecture.md
examples/generic-utils/: Cargo.toml  README.md
examples/helm-based-control-scripts/: Cargo.toml  README.md
examples/helm-based-control-scripts/docker/: Dockerfile
examples/web-app/: Cargo.toml  README.md
examples/web-app-v2/: Cargo.toml  README.md
helm-control-scripts/: Cargo.toml  Dockerfile  README.md  default.nix
helm-control-scripts/src/: app_keys.rs  app_overrides.rs  archive.rs  archive_check.rs  check.rs  cleanup.rs  config_check.rs  create_update.rs  default_app_overrides.rs  default_deployment_overrides.rs  deployment_keys.rs  deployment_overrides.rs  info.rs  init.rs  lib.rs  tag_check.rs  unarchive.rs
migrations/: sqitch.plan
migrations/deploy/: add_archived_status.sql  add_deployment_overrides_and_deployment_log_overrides.sql  add_detailed_failures.sql  add_duration_and_stdout_and_stderr_to_deployment_logs.sql  archived_flag.sql  create_deployment_metadata.sql  deployment_logs.sql  deployments.sql  metadata-ordering.sql  migrate_2.0.sql  move_tag_to_overrides.sql  remove_archived_column.sql  rename-delete-to-archive.sql  rename_delete_to_archive_2.sql  rename_elements_of_scope_enum.sql  status_and_status_updated_at.sql
migrations/revert/: add_archived_status.sql  add_deployment_overrides_and_deployment_log_overrides.sql  add_detailed_failures.sql  add_duration_and_stdout_and_stderr_to_deployment_logs.sql  archived_flag.sql  create_deployment_metadata.sql  deployment_logs.sql  deployments.sql  metadata-ordering.sql  migrate_2.0.sql  move_tag_to_overrides.sql  remove_archived_column.sql  rename-delete-to-archive.sql  rename_delete_to_archive_2.sql  rename_elements_of_scope_enum.sql  status_and_status_updated_at.sql
migrations/verify/: add_archived_status.sql  add_deployment_overrides_and_deployment_log_overrides.sql  add_detailed_failures.sql  add_duration_and_stdout_and_stderr_to_deployment_logs.sql  archived_flag.sql  create_deployment_metadata.sql  deployment_logs.sql  deployments.sql  metadata-ordering.sql  migrate_2.0.sql  move_tag_to_overrides.sql  remove_archived_column.sql  rename-delete-to-archive.sql  rename_delete_to_archive_2.sql  rename_elements_of_scope_enum.sql  (+1 more)
nix/: amazonka-1.6.1.nix  amazonka-core-1.6.1.nix  amazonka-ecr-1.6.1.nix  amazonka-test-1.6.1.nix  ci.nix  default.nix  haskell-language-server-overrides.nix  octo.nix  octopod-overrides.nix  servant-websockets-2.0.0.nix  sources.json
octo-cli/: LICENSE  octo-cli.cabal
octo-cli/src/: Main.hs
octo-cli/src/Octopod/: CLI.hs
octo-cli/src/Octopod/CLI/: Args.hs  TLS.hs
octo-cli/src/Octopod/PowerAPI/Auth/: Client.hs
octo-cli/src/Text/Layout/Table/: Extras.hs
octopod-api/: octopod-api.cabal
octopod-api/src/Octopod/: API.hs  PowerAPI.hs
octopod-api/src/Octopod/API/: WebSocket.hs
octopod-backend/: octopod-backend.cabal
octopod-backend/app/: Main.hs
octopod-backend/src/: Orphans.hs  TLS.hs  Types.hs
octopod-backend/src/Control/: CacheMap.hs
octopod-backend/src/Control/Octopod/: DeploymentLock.hs
octopod-backend/src/Database/PostgreSQL/Simple/: Instances.hs
octopod-backend/src/Octopod/: Schema.hs  Server.hs
octopod-backend/src/Octopod/PowerAPI/Auth/: Server.hs
octopod-backend/src/Octopod/Server/: Args.hs  ControlScriptUtils.hs  Logger.hs  Logging.hs  Posix.hs
octopod-common/: octopod-common.cabal
octopod-css/: .stylelintrc.json  default.nix  gulpfile.js  npm-shrinkwrap.json  package-lock.json  package.json
octopod-frontend/: Main.min.js  default.nix  elm.js  elm.json  index.html  main.js  octopod-frontend.cabal
octopod-frontend-elm/: custom.html  elm-srcs.nix  elm.json
revert/: deployments.sql
sqitch/: sqitch.plan
src/: API.hs  DMC.hs  DMS.hs  Lib.hs  TLS.hs  Types.hs
src/API/: Lib.hs
utils/b2b-utils/: .gitignore  Cargo.toml  Makefile  README.md
utils/b2b-utils/docker/: Dockerfile  build_docker.sh
utils/b2b-utils/src/: lib.rs
(+310 files in other folders)
