cabal-version: 2.4
name:           dm
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/dm#readme>
homepage:       https://github.com/https://github.com/Aviora/dm#readme
bug-reports:    https://github.com/https://github.com/Aviora/dm/issues
author:         Andrei Orlov
maintainer:     aaorlov1@gmail.com
copyright:      2020 LLC Typeable
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/https://github.com/Aviora/dm

library
  ghc-options:         -Wall
                       -Werror
  default-extensions:  BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveFunctor
                     , DeriveGeneric
                     , DerivingVia
                     , DuplicateRecordFields
                     , FlexibleContexts
                     , GeneralizedNewtypeDeriving
                     , LambdaCase
                     , OverloadedStrings
                     , ScopedTypeVariables
                     , TypeApplications
                     , TypeOperators
  exposed-modules:
      API
      DMC
      DMC.Args
      DMS
      DMS.Args
      DMS.Git
      DMS.Kubernetes
      TLS
      Types
  other-modules:
      Paths_dm
  hs-source-dirs:
      src
  build-depends:
      aeson
    , async
    , base >=4.7 && <5
    , bytestring
    , chronos
    , connection
    , data-default-class
    , deriving-aeson
    , directory
    , fast-logger
    , filepath
    , generic-lens
    , http-api-data
    , http-client
    , http-client-tls
    , lens
    , mtl
    , network-uri
    , optparse-generic
    , postgresql-error-codes
    , postgresql-simple
    , resource-pool
    , servant
    , servant-client
    , servant-client-core
    , servant-server
    , temporary
    , text
    , tls
    , transformers
    , typed-process
    , warp
    , warp-tls
    , x509
    , x509-store
    , x509-validation
  default-language: Haskell2010

executable dmc-exe
  main-is: Main.hs
  ghc-options:         -Wall
                       -Werror
  other-modules:
      Paths_dm
  hs-source-dirs:
      app/dmc
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , async
    , base >=4.7 && <5
    , bytestring
    , chronos
    , connection
    , data-default-class
    , directory
    , dm
    , fast-logger
    , filepath
    , http-client
    , http-client-tls
    , mtl
    , network-uri
    , optparse-generic
    , postgresql-error-codes
    , postgresql-simple
    , resource-pool
    , servant
    , servant-client
    , servant-client-core
    , servant-server
    , temporary
    , text
    , tls
    , transformers
    , typed-process
    , warp
    , warp-tls
    , x509
    , x509-store
    , x509-validation
  default-language: Haskell2010

executable dms-exe
  main-is: Main.hs
  ghc-options:         -Wall
                       -Werror
  other-modules:
      Paths_dm
  hs-source-dirs:
      app/dms
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , async
    , base >=4.7 && <5
    , bytestring
    , chronos
    , connection
    , data-default-class
    , directory
    , dm
    , fast-logger
    , http-client
    , http-client-tls
    , mtl
    , network-uri
    , optparse-generic
    , postgresql-error-codes
    , postgresql-simple
    , resource-pool
    , servant
    , servant-client
    , servant-client-core
    , servant-server
    , temporary
    , text
    , tls
    , transformers
    , typed-process
    , warp
    , warp-tls
    , x509
    , x509-store
    , x509-validation
  default-language: Haskell2010

test-suite dm-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_dm
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , async
    , base >=4.7 && <5
    , bytestring
    , chronos
    , connection
    , data-default-class
    , directory
    , dm
    , fast-logger
    , filepath
    , http-client
    , http-client-tls
    , mtl
    , network-uri
    , optparse-generic
    , postgresql-error-codes
    , postgresql-simple
    , resource-pool
    , servant
    , servant-client
    , servant-client-core
    , servant-server
    , temporary
    , text
    , tls
    , transformers
    , typed-process
    , warp
    , warp-tls
    , x509
    , x509-store
    , x509-validation
  default-language: Haskell2010
