cabal-version: 2.4

name:         octo-cli
version:      0.1.0.0
description:  Please see the README on GitHub at <https://github.com/typeable/octopod#readme>
homepage:     https://github.com/typeable/octopod
bug-reports:  https://github.com/typeable/octopod/issues
license:      BSD-3-Clause
license-file: LICENSE
author:       Typeable
maintainer:   octopod@typeable.io

executable octo
  main-is: Main.hs
  other-modules:
    Octopod.CLI
    Octopod.CLI.Args
    Octopod.CLI.TLS
    Text.Layout.Table.Extras
    Octopod.PowerAPI.Auth.Client
  default-extensions:
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeOperators
    OverloadedLabels
    FlexibleInstances
    TypeFamilies
    MultiParamTypeClasses
    FunctionalDependencies
    UndecidableInstances
    ViewPatterns
  build-depends:
    aeson,
    base,
    bytestring,
    chronos,
    connection,
    data-default-class,
    generic-lens,
    http-client-tls,
    http-client,
    http-types,
    lens,
    octopod-api,
    octopod-common,
    optparse-applicative,
    servant-client-core,
    servant-client,
    servant,
    text,
    tls,
    transformers,
    table-layout ^>= 0.9.0.0,
    servant-auth,
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Werror
