cabal-version: 2.4

name:         octopod-api
version:      0.1.0.0
description:  Please see the README on GitHub at <https://github.com/typeable/octopod#readme>
homepage:     https://github.com/typeable/octopod
bug-reports:  https://github.com/typeable/octopod/issues
license:      BSD-3-Clause
license-file: LICENSE
author:       Typeable
maintainer:   octopod@typeable.io

library
  exposed-modules:
    Octopod.API
    Octopod.API.WebSocket
    Octopod.PowerAPI
  default-extensions:
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeOperators
  build-depends:
    base,
    servant,
    octopod-common,
    servant-auth,
    text,
  if !impl(ghcjs)
    build-depends:
      servant-websockets,
      aeson,
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode
    -Wno-safe
    -Wno-prepositive-qualified-module
    -Wno-missing-import-lists
    -Wno-all-missed-specialisations
    -Wno-missing-local-signatures
    -Wno-partial-fields
    -Wno-unsafe
    -Wno-monomorphism-restriction
    -Wno-missed-specialisations
