cabal-version: 2.4
name:           octopod-backend
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/typeable/octopod#readme>
homepage:       https://github.com/typeable/octopod
bug-reports:    https://github.com/typeable/octopod/issues
author:         Typeable
maintainer:     octopod@typeable.io
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/typeable/octopod

library
  ghc-options:         -Wall
                       -Werror
  default-extensions:  BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveFunctor
                     , DeriveGeneric
                     , DerivingVia
                     , DuplicateRecordFields
                     , FlexibleContexts
                     , GeneralizedNewtypeDeriving
                     , LambdaCase
                     , OverloadedStrings
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TypeApplications
                     , TypeOperators
  exposed-modules:
      Octopod.Server
      Octopod.Server.Args
      Octopod.Server.ControlScriptUtils
      Octopod.Server.Logger
      Octopod.Server.Posix
      Orphans
      TLS
      Types
      Database.PostgreSQL.Simple.Instances
  hs-source-dirs:
      src
  build-depends:
      aeson
    , async
    , base >=4.7 && <5
    , bytestring
    , chronos
    , conduit
    , connection
    , data-default-class
    , deriving-aeson
    , directory
    , octopod-common
    , fast-logger
    , filepath
    , generic-lens
    , http-api-data
    , http-client
    , http-client-tls
    , lens
    , mtl
    , network-uri
    , octopod-api
    , optparse-applicative
    , optparse-generic
    , postgresql-error-codes
    , postgresql-simple
    , resource-pool
    , servant
    , servant-client
    , servant-client-core
    , servant-server
    , servant-websockets
    , stm
    , temporary
    , text
    , tls
    , transformers
    , transformers-base
    , typed-process
    , unix
    , warp
    , warp-tls
    , x509
    , x509-store
    , x509-validation
    , containers
  default-language: Haskell2010

executable octopod-exe
  main-is: Main.hs
  ghc-options:         -Wall
                       -Werror
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , async
    , base >=4.7 && <5
    , bytestring
    , chronos
    , conduit
    , connection
    , data-default-class
    , directory
    , octopod-backend
    , fast-logger
    , http-client
    , http-client-tls
    , mtl
    , network-uri
    , optparse-applicative
    , optparse-generic
    , postgresql-error-codes
    , postgresql-simple
    , resource-pool
    , servant
    , servant-client
    , servant-client-core
    , servant-server
    , servant-websockets
    , stm
    , temporary
    , text
    , tls
    , transformers
    , transformers-base
    , typed-process
    , unix
    , warp
    , warp-tls
    , x509
    , x509-store
    , x509-validation
  default-language: Haskell2010

test-suite octopod-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , async
    , base >=4.7 && <5
    , bytestring
    , chronos
    , conduit
    , connection
    , data-default-class
    , directory
    , octopod-backend
    , fast-logger
    , filepath
    , http-client
    , http-client-tls
    , mtl
    , network-uri
    , optparse-applicative
    , optparse-generic
    , postgresql-error-codes
    , postgresql-simple
    , resource-pool
    , servant
    , servant-client
    , servant-client-core
    , servant-server
    , servant-websockets
    , stm
    , temporary
    , text
    , tls
    , transformers
    , transformers-base
    , typed-process
    , unix
    , warp
    , warp-tls
    , x509
    , x509-store
    , x509-validation
  default-language: Haskell2010
