cabal-version: 2.4
name:           octopod-backend
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/typeable/octopod#readme>
homepage:       https://github.com/typeable/octopod
bug-reports:    https://github.com/typeable/octopod/issues
author:         Typeable
maintainer:     octopod@typeable.io
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/typeable/octopod

library
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode
    -Wno-safe
    -Wno-prepositive-qualified-module
    -Wno-missing-import-lists
    -Wno-all-missed-specialisations
    -Wno-missing-local-signatures
    -Wno-partial-fields
    -Wno-unsafe
    -Wno-monomorphism-restriction
    -Wno-missed-specialisations
  default-extensions:  BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveFunctor
                     , DeriveGeneric
                     , DerivingVia
                     , DuplicateRecordFields
                     , FlexibleContexts
                     , GeneralizedNewtypeDeriving
                     , LambdaCase
                     , OverloadedStrings
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TypeApplications
                     , TypeOperators
                     , OverloadedLabels
                     , UndecidableInstances
                     , MultiParamTypeClasses
                     , FunctionalDependencies
                     , RankNTypes
                     , TypeFamilies
                     , QuantifiedConstraints
                     , DeriveAnyClass
                     , ViewPatterns
  exposed-modules:
      Octopod.Server
      Octopod.Server.Args
      Octopod.Server.ControlScriptUtils
      Octopod.Server.Logger
      Octopod.Server.Posix
      Orphans
      Types
      Control.Octopod.DeploymentLock
      Octopod.PowerAPI.Auth.Server
      Octopod.Schema
  hs-source-dirs:
      src
  build-depends:
      aeson
    , async
    , base >=4.7 && <5
    , bytestring
    , conduit
    , deriving-aeson
    , octopod-common
    , fast-logger
    , generic-lens
    , http-api-data
    , lens
    , mtl
    , network-uri
    , octopod-api
    , optparse-applicative
    , optparse-generic
    , postgresql-error-codes
    , postgresql-simple
    , resource-pool
    , servant
    , servant-server
    , servant-websockets
    , stm
    , text
    , transformers
    , transformers-base
    , typed-process
    , unix
    , warp
    , x509
    , containers
    , monad-control
    , lifted-base
    , containers
    , servant-auth-server
    , wai
    , jose
    , rel8
    , time
    , hasql
    , hasql-transaction
    , ordered-containers
  default-language: Haskell2010

executable octopod-exe
  main-is: Main.hs
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-missing-safe-haskell-mode
    -Wno-safe
    -Wno-prepositive-qualified-module
    -Wno-missing-import-lists
    -Wno-all-missed-specialisations
    -Wno-missing-local-signatures
    -Wno-partial-fields
    -Wno-unsafe
    -Wno-monomorphism-restriction
    -Wno-missed-specialisations
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , octopod-backend
  default-language: Haskell2010
