[package]
name = "helm-based-control-scripts"
version = "0.1.0"
authors = ["Typeable LLC <octopod@typeable.io>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
rand = "0.8.3"
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.62"
tokio = { version = "1", default_features = false, features = ["full"] }
reqwest = { version = "0.11.1", default_features = false, features = ["json", "rustls-tls"] }

[[bin]]
name = "create"
path = "src/bin/create.rs"

[[bin]]
name = "archive"
path = "src/bin/archive.rs"

[[bin]]
name = "check"
path = "src/bin/check.rs"

[[bin]]
name = "cleanup"
path = "src/bin/cleanup.rs"

[[bin]]
name = "archive_check"
path = "src/bin/archive_check.rs"

[[bin]]
name = "tag_check"
path = "src/bin/tag_check.rs"

[[bin]]
name = "init"
path = "src/bin/init.rs"

[[bin]]
name = "info"
path = "src/bin/info.rs"
