[package]
name = "b2b-utils"
version = "0.1.0"
authors = ["Andrei Orlov <aaorlov1@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.1"
rand = "0.7.3"
serde = "1.0.114"
serde_json = "1.0.56"
fs_extra = "1.1.0"
walkdir = "2.3.1"
sha2 = "0.9.1"
hex = "0.4.2"

[[bin]]
name = "create"
path = "src/bin/create.rs"

[[bin]]
name = "update"
path = "src/bin/update.rs"

[[bin]]
name = "delete"
path = "src/bin/delete.rs"

[[bin]]
name = "check"
path = "src/bin/check.rs"

[[bin]]
name = "cleanup"
path = "src/bin/cleanup.rs"
